# prime-environments

./: .gitignore  pyproject.toml
.github/workflows/: env-sync.yml
community-environments/: AGENTS.md  README.md
community-environments/configs/: endpoints.py
community-environments/docs/: contributing.md
community-environments/environments/agentic_misalignment/: agentic_misalignment.py
community-environments/environments/agentic_misalignment/outputs/evals/agentic-misalignment--arcee-ai--trinity-large-preview:free/4eea3761/: results.jsonl
community-environments/environments/agentic_misalignment/outputs/evals/agentic-misalignment--arcee-ai--trinity-large-preview:free/7e12f4b8/: results.jsonl
community-environments/environments/bixbench/: pyproject.toml
community-environments/environments/fh_aviary/: fh_aviary.py
community-environments/environments/gutenberg_env/: gutenberg_env.py
community-environments/environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-4.1-mini/d1fe20fa/: metadata.json
community-environments/environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-4.1-mini/e4dfe2db/: results.jsonl
community-environments/environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-5-mini-2025-08-07/e6123ed2/: results.jsonl
community-environments/environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-5-nano/94d5b0a5/: metadata.json
community-environments/environments/hle_web_py/: pyproject.toml
community-environments/environments/llm_writer_negative_style/: README.md
community-environments/environments/seeclick/: pyproject.toml
community-environments/scripts/: install.sh
environments/BigBench_BBH/: BigBench_BBH.py  README.md  pyproject.toml
environments/BigBench_BBH/outputs/evals/BigBench-BBH--kimi-k2-0905-preview/cb59ef18/: metadata.json  results.jsonl
environments/Pydantic/: Pydantic.py  README.md  pyproject.toml
environments/agentic_misalignment/: README.md  pyproject.toml
environments/agentic_misalignment/create_data/: create_dataset.py  prompt_generator.py
environments/agentic_misalignment/outputs/evals/agentic-misalignment--arcee-ai--trinity-large-preview:free/4eea3761/: metadata.json
environments/agentic_misalignment/outputs/evals/agentic-misalignment--arcee-ai--trinity-large-preview:free/7e12f4b8/: metadata.json
environments/agentic_misalignment/outputs/evals/agentic-misalignment--openai--gpt-oss-20b/3e7e70c4/: metadata.json  results.jsonl
environments/agentic_misalignment/rubrics/: agentic_misaligment_rubric.py  blackmail_rubric.py  deliberation_rubric.py  leak_rubric.py  murder_rubric.py
environments/gutenberg_env/: README.md  pyproject.toml
environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-4.1-mini/d1fe20fa/: results.jsonl
environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-4.1-mini/e4dfe2db/: metadata.json
environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-5-mini-2025-08-07/e6123ed2/: metadata.json
environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-5-nano/94d5b0a5/: results.jsonl
environments/gutenberg_env/outputs/evals/gutenberg_env--gpt-5/383cb67c/: results.jsonl
environments/gutenberg_env/outputs/evals/gutenberg_env--o4-mini-2025-04-16/44423396/: metadata.json  results.jsonl
environments/hanabi/: pyproject.toml
environments/hanabi/outputs/evals/hanabi--google--gemini-3-flash-preview/df5c19a8/: results.jsonl
environments/hanabi/outputs/evals/hanabi--openai--gpt-4.1-mini/b9a2e8b3/: results.jsonl
environments/hanabi/outputs/evals/hanabi--prime-intellect--intellect-3/8e092de8/: results.jsonl
environments/hanabi/outputs/evals/hanabi--x-ai--grok-4-fast/de2d00ea/: results.jsonl
environments/legalbench/: README.md
environments/minif2f/: Dockerfile
environments/pydantic/: README.md  pyproject.toml
environments/pydantic_search_codebase/: README.md  pydantic_search_codebase.py  pyproject.toml  questions.json
tests/: test_envs.py
(+3 files in other folders)
