[project]
name = "seeclick"
version = "0.1.0"
description = "Test model's ability to correctly click on target UI"
tags = ["multimodal"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.3.post0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["seeclick.py"]
